anchors: Fixes main content overflow and resets body

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,11 @@
 html, body {
+  width: 100%;
   height: 100%;
+  position: absolute;
+  left: 0;
+  top:0;
+  margin: 0;
+  padding: 0;
   font-family: 'Quicksand', sans-serif;
 }
 
@@ -22,6 +28,7 @@ body {
 .jumbotron { 
   height: 100%;
   width: 100%;
+  overflow-y: auto;
   position: block;
   background-image: url(http://i.imgur.com/wvbAhwy.jpg);
   background-repeat: no-repeat;
@@ -93,9 +100,9 @@ body {
 }
 
 .buttons a:hover{
-	position:relative;
-	left: 2px;
-	top: 2px;
+  position:relative;
+  left: 2px;
+  top: 2px;
 }
 
 .homecontent {
